--- a/less/.csslintrc
+++ b/less/.csslintrc
@@ -16,5 +16,6 @@
   "unique-headings": false,
   "universal-selector": false,
   "unqualified-attributes": false,
-  "no-empty-source": null
+  "no-empty-source": null,
+  "ids": null
 }
