--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ source:           docs
 destination:      _gh_pages
 host:             0.0.0.0
 port:             9001
-url:              http://getbootstrap.com
+url:              https://nanna-dk.github.io/ku.dk-bootstrap/
 encoding:         UTF-8
 
 gems:
