--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ source:           docs
 destination:      _gh_pages
 host:             0.0.0.0
 port:             9001
-url:              https://nanna-dk.github.io/ku.dk-bootstrap/
+url:              https://nanna-dk.github.io/ku.dk-bootstrap
 encoding:         UTF-8
 
 gems:
@@ -18,4 +18,4 @@ gems:
 
 # Custom vars
 current_version:  3.3.7
-repo:             https://github.com/nanna-dk/ku.dk-bootstrap
+repo:             https://nanna-dk.github.io/ku.dk-bootstrap
