--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ gems:
 
 # Custom vars
 current_version:  3.3.7
-repo:             https://nanna-dk.github.io/ku.dk-bootstrap
+repo:             https://github.com/nanna-dk/ku.dk-bootstrap
