--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: University of Copenhagen website branding
-name: University of Copenhagen, Communications
+author:
+  name: University of Copenhagen, Communications
 
 # Dependencies
 markdown:         kramdown
@@ -13,8 +14,9 @@ source:           docs
 destination:      _gh_pages
 host:             0.0.0.0
 port:             9001
-url:              "/" # https://nanna-dk.github.io/ku.dk-bootstrap
+url:              https://nanna-dk.github.io
 encoding:         UTF-8
+baseurl:          /ku.dk-bootstrap
 
 gems:
   - jekyll-sitemap
