--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "framework",
     "web"
   ],
-  "homepage": "http://getbootstrap.com",
+  "homepage": "https://nanna-dk.github.io/ku.dk-bootstrap/",
   "author": "Twitter, Inc.",
   "scripts": {
     "change-version": "node grunt/change-version.js",
@@ -23,10 +23,10 @@
   "main": "./dist/js/npm",
   "repository": {
     "type": "git",
-    "url": "https://github.com/twbs/bootstrap.git"
+    "url": "https://github.com/nanna-dk/ku.dk-bootstrap.git"
   },
   "bugs": {
-    "url": "https://github.com/twbs/bootstrap/issues"
+    "url": "https://github.com/nanna-dk/ku.dk-bootstrap/issues"
   },
   "license": "MIT",
   "devDependencies": {
