--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: University of Copenhagen website branding
 author:
-name: University of Copenhagen, Communications
+name: Nanna Ellegaard
 
 # Dependencies
 markdown:         kramdown
