--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ destination:      _gh_pages
 host:             0.0.0.0
 port:             9001
 url:              https://nanna-dk.github.io
-baseurl:          /ku.dk-bootstrap
+#baseurl:          /ku.dk-bootstrap
 encoding:         UTF-8
 
 timezone: Europe/Copenhagen
