--- a/grunt/configBridge.json
+++ b/grunt/configBridge.json
@@ -19,14 +19,9 @@
   },
   "config": {
     "autoprefixerBrowsers": [
-      "Android 2.3",
+      "last 2 versions",
       "Android >= 4",
-      "Chrome >= 26",
-      "Firefox >= 30",
-      "Explorer >= 8",
-      "iOS >= 7",
-      "Opera >= 20",
-      "Safari >= 8"
+      "iOS >= 7"
     ],
     "jqueryCheck": [
       "if (typeof jQuery === 'undefined') {",
