--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "framework",
     "web"
   ],
-  "homepage": "https://nanna-dk.github.io/ku.dk-bootstrap/",
+  "homepage": "https://ku-kom.github.io/bootstrap/",
   "author": "Twitter, Inc.",
   "scripts": {
     "change-version": "node grunt/change-version.js",
@@ -23,16 +23,16 @@
   "main": "./dist/js/npm",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nanna-dk/ku.dk-bootstrap.git"
+    "url": "https://github.com/ku-kom/bootstrap.git"
   },
   "bugs": {
-    "url": "https://github.com/nanna-dk/ku.dk-bootstrap/issues"
+    "url": "https://github.com/ku-kom/bootstrap/issues"
   },
   "license": "MIT",
   "devDependencies": {
     "btoa": "~1.1.2",
     "glob": "~7.0.3",
-    "grunt": "~1.0.1",
+    "grunt": "^1.0.1",
     "grunt-autoprefixer": "~3.0.4",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-compress": "~1.3.0",
@@ -87,6 +87,7 @@
     ]
   },
   "dependencies": {
+    "grunt-cli": "^1.2.0",
     "gulp": "^3.9.1"
   }
 }
