--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ku-kom",
+  "name": "bootstrap",
   "description": "The most popular front-end framework for developing responsive, mobile first projects on the web.",
   "version": "3.3.7",
   "keywords": [
