--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,9 +1,10 @@
 {
-  "name": "University of Copenhagen",
+  "name": "Københavns Universitet",
   "short_name": "KU.dk",
   "description": "Københavns Universitet er med cirka 40.000 studerende og 9.000 medarbejdere en af Nordens største forsknings- og uddannelsesinstitutioner.",
   "start_url": "/",
   "display": "browser",
+  "orientation": "portrait",
   "lang": "da-DK",
   "background_color": "#fff",
   "theme_color": "#901a1e",
@@ -11,5 +12,17 @@
     "src": "http://cms.ku.dk/billeder/apple-touch-icon.png",
     "sizes": "180x180",
     "type": "image/png"
+  }, {
+    "src": "http://cms.ku.dk/billeder/apple-touch-icon512.png",
+    "sizes": "152x152",
+    "type": "image/png"
+  }],
+  "related_applications": [{
+    "platform": "play",
+    "url": "https://play.google.com/store/apps/details?id=dk.ku.myucph",
+    "id": "dk.ku.myucph"
+  }, {
+    "platform": "itunes",
+    "url": "https://itunes.apple.com/dk/app/myucph/id897989924"
   }]
 }
