--- a/grunt/configBridge.json
+++ b/grunt/configBridge.json
@@ -11,6 +11,8 @@
       "../assets/js/src/customizer.js"
     ],
     "docsJs": [
+      "../../js/affix.js",
+      "../../js/scrollspy.js",
       "../assets/js/vendor/holder.min.js",
       "../assets/js/vendor/ZeroClipboard.min.js",
       "../assets/js/vendor/anchor.min.js",
