--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:        pretty
 # Server
 source:           docs
 destination:      _gh_pages
-host:             0.0.0.0
+host:             localhost
 port:             9001
 url:              https://ku-kom.github.io
 baseurl:          /bootstrap
