--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   "devDependencies": {
     "btoa": "~1.1.2",
     "glob": "~7.0.3",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.3",
     "grunt-autoprefixer": "~3.0.4",
     "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-compress": "~1.3.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "~1.0.0",
     "grunt-contrib-connect": "~1.0.0",
     "grunt-contrib-copy": "~1.0.0",
@@ -47,7 +47,7 @@
     "grunt-contrib-pug": "~1.0.0",
     "grunt-contrib-qunit": "~0.7.0",
     "grunt-contrib-uglify": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-csscomb": "~3.1.0",
     "grunt-exec": "~1.0.0",
     "grunt-html": "~8.0.1",
