--- a/less/.csslintrc
+++ b/less/.csslintrc
@@ -23,5 +23,6 @@
   "overqualified-elements": null,
   "bulletproof-font-face": null,
   "order-alphabetical": null,
-  "font-sizes": null
+  "font-sizes": null,
+  "font-faces": null
 }
