--- a/docs/assets/js/.jshintrc
+++ b/docs/assets/js/.jshintrc
@@ -12,5 +12,6 @@
   "strict"   : false,
   "undef"    : true,
   "unused"   : false,
-  "devel"    : true
+  "devel"    : true,
+  "Symbol"   : true
 }
