--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: University of Copenhagen website branding
 author: Communications, University of Copenghagen
-name: Nanna Ellegaard (nanna-dk)
+name: Nanna Ellegaard (https://github.com/nanna-dk)
 
 # Dependencies
 markdown:         kramdown
