--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "grunt-html": "^14.2.0",
     "grunt-jekyll": "~1.0.1",
     "grunt-jscs": "~3.0.1",
+    "grunt-stylelint": "^0.15.0",
     "load-grunt-tasks": "~5.1.0",
     "markdown-it": "^12.0.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
+    "stylelint": "^13.7.2",
     "text-table": "^0.2.0",
     "time-grunt": "^2.0.0"
   },
