--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "grunt-contrib-uglify": "~5.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-csscomb": "~4.2.0",
+    "grunt-eslint": "^23.0.0",
     "grunt-exec": "~3.0.0",
     "grunt-html": "^14.2.0",
     "grunt-jekyll": "~1.0.1",
-    "grunt-jscs": "~3.0.1",
     "grunt-stylelint": "^0.15.0",
     "load-grunt-tasks": "~5.1.0",
     "markdown-it": "^12.0.2",
