--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -12,5 +12,8 @@
   "strict"   : false,
   "undef"    : true,
   "unused"   : false,
-  "devel"    : true
+  "devel"    : true,
+  "globals": {
+    "JSON": true
+  }
 }
