--- a/grunt/configBridge.json
+++ b/grunt/configBridge.json
@@ -11,7 +11,7 @@
   },
   "config": {
     "autoprefixerBrowsers": [
-      "last 2 version",
+      "last 2 versions",
       "Android >= 8",
       "iOS >= 9"
     ],
