--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -3,7 +3,6 @@
   "browser"  : true,
   "eqeqeq"   : false,
   "eqnull"   : true,
-  "es3"      : true,
   "expr"     : true,
   "jquery"   : true,
   "latedef"  : true,
@@ -15,5 +14,6 @@
   "devel"    : true,
   "globals": {
     "JSON": true
-  }
+  },
+  "esversion": 6
 }
