--- a/less/.stylelintrc
+++ b/less/.stylelintrc
@@ -3,6 +3,6 @@
     "max-empty-lines": 2,
     # "number-leading-zero": "never",
     "comment-empty-line-before": null,
-    "function-calc-no-invalid": true
+    #"function-calc-no-invalid": true
   }
 }
